css/remarkdown.css
:root {
    --font-color: #505050;
    --border-color: #DDD;
    --link-color: #477DB8;
    --accent-color: rgba(240,32,80,0.6);
    --background-color: #EEE;
    --body-color: white;
    --phoneWidth: (max-width:684px);
    --tabletWidth: (max-width:900px);
}

/*! ReMarkdown 3.0.0 (MIT) https://fvsch.github.io/remarkdown/ */
/*
  Included: all styles
  Defaults: hn-reset hn-hash ul-hyphen ol-decimal quote-gt em-star strong-star a-bracket code-tick pre-indent hr-star
*/

.remarkdown pre,
.remarkdown code,
.remarkdown kbd,
.remarkdown samp {
}

.remarkdown h1 {
  font-size: inherit;
  font-weight: inherit;
  margin-top: 2.25em;
  margin-bottom: 1.5em;
}

.remarkdown h2 {
  font-size: inherit;
  font-weight: inherit;
  margin-top: 2.25em;
  margin-bottom: 1.5em;
}

.remarkdown h3,
.remarkdown h4,
.remarkdown h5,
.remarkdown h6 {
  font-size: inherit;
  font-weight: inherit;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}

.remarkdown h1::before {
  content: "# ";
}

.remarkdown h2::before {
  content: "## ";
}

.remarkdown h3::before {
  content: "### ";
}

.remarkdown h4::before {
  content: "#### ";
}

.remarkdown h5::before {
  content: "##### ";
}

.remarkdown h6::before {
  content: "###### ";
}

.remarkdown.h1-underline h1,
.remarkdown.h2-underline h2 {
  display: table;
  overflow: hidden;
  position: relative;
  padding-bottom: 1.5em;
}

.remarkdown.h1-underline h1::before,
.remarkdown.h2-underline h2::before {
  content: none;
}

.remarkdown.h1-underline h1::after,
.remarkdown.h2-underline h2::after {
  position: absolute;
  bottom: 0;
  left: 0;
  height: 1.5em;
  width: 100%;
  overflow: hidden;
  word-break: break-all;
  cursor: default;
}

.remarkdown.h1-underline h1::after {
  content: "========================================================================================================================";
}

.remarkdown.h2-underline h2::after {
  content: "------------------------------------------------------------------------------------------------------------------------";
}

.remarkdown p {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}

.remarkdown figure {
  margin: 1.5em 0 1.5em;
}

hr {
  height: 1.5em;
  line-height: 1.5em;
  margin: 1em 0 1.5em;
  border: none;
  color: inherit;
}

.remarkdown.hr-center hr {
  text-align: center;
}

.remarkdown hr::before {
  content: "* * * *";
}

.remarkdown.hr-hyphen hr::before {
  content: "-------";
}

.remarkdown ul {
  margin: 1.5em 0ch 1.5em 4ch;
  padding: 0;
}

.remarkdown li ul {
  margin-top: 0;
  margin-bottom: 0;
}

.remarkdown.ul-plus ul {
  list-style: none;
}

.remarkdown.ul-plus ul > li::before {
  float: left;
  width: 1ch;
  margin-left: -4ch;
  margin-right: 1ch;
  content: "+";
}

.remarkdown.ul-star ul {
  list-style: none;
}

.remarkdown.ul-star ul > li::before {
  float: left;
  width: 1ch;
  margin-left: -4ch;
  margin-right: 1ch;
  content: "*";
}

.remarkdown ul {
  list-style: none;
}

.remarkdown ul > li::before {
  float: left;
  width: 1ch;
  margin-left: -4ch;
  margin-right: 1ch;
  content: "-";
}

.remarkdown ol {
  margin: 1.5em 0ch 1.5em 4ch;
  padding: 0;
}

.remarkdown li ol {
  margin-top: 0;
  margin-bottom: 0;
}

.remarkdown ol {
  list-style: none;
  counter-reset: rmd-ol;
}

.remarkdown ol > li {
  counter-increment: rmd-ol;
}

.remarkdown ol > li::before {
  float: left;
  margin-left: -4ch;
  margin-right: 1ch;
  min-width: 2ch;
  content: counter(rmd-ol) ".";
}

.remarkdown.ol-zero ol {
  list-style: none;
}

.remarkdown.ol-zero ol > li::before {
  float: left;
  margin-left: -4ch;
  margin-right: 1ch;
  min-width: 2ch;
  content: "0.";
}

.remarkdown.ol-alpha ol {
  list-style: none;
  counter-reset: rmd-ol;
}

.remarkdown.ol-alpha ol > li {
  counter-increment: rmd-ol;
}

.remarkdown.ol-alpha ol > li::before {
  float: left;
  margin-left: -4ch;
  margin-right: 1ch;
  min-width: 2ch;
  content: counter(rmd-ol, lower-alpha) ".";
}

.remarkdown a::before {
  content: "[";
}

.remarkdown a::after {
  content: "]";
}

.remarkdown.a-showurl a[href]::before {
  content: "[";
}

.remarkdown.a-showurl a[href]::after {
  content: "](" attr(href) ")";
  word-break: break-all;
}

.remarkdown em,
.remarkdown strong {
  font-style: normal;
  font-weight: normal;
}

.remarkdown em::before,
.remarkdown em::after {
  content: "*";
}

.remarkdown.em-underscore em::before,
.remarkdown.em-underscore em::after {
  content: "_";
}

.remarkdown strong::before,
.remarkdown strong::after {
  content: "**";
}

.remarkdown.strong-underscore strong::before,
.remarkdown.strong-underscore strong::after {
  content: "__";
}

.remarkdown code::before,
.remarkdown code::after {
  content: "`";
}

.remarkdown pre code::before,
.remarkdown pre code::after {
  display: none;
}

.remarkdown pre {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  tab-size: 4;
}

.remarkdown pre {
  margin-left: 4ch;
  margin-right: 0ch;
}

.remarkdown.pre-tick pre::before,
.remarkdown.pre-tick pre::after,
.remarkdown.pre-tilde pre::before,
.remarkdown.pre-tilde pre::after,
.remarkdown.pre-tilde-full pre::before,
.remarkdown.pre-tilde-full pre::after {
  display: block;
  width: 100%;
  height: 1.5em;
  cursor: default;
}

.remarkdown.pre-tick pre::before,
.remarkdown.pre-tick pre::after {
  content: "```";
  position: relative;
  top: 0.25em;
}

.remarkdown.pre-tilde pre::before,
.remarkdown.pre-tilde pre::after {
  content: "~~~";
  overflow: hidden;
  word-break: break-all;
}

.remarkdown.pre-tilde-full pre::before,
.remarkdown.pre-tilde-full pre::after {
  content: "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~";
  overflow: hidden;
  word-break: break-all;
}

.remarkdown blockquote {
  margin: 1.5em 2ch 1.5em 2ch;
  padding: 0;
  font-style: italic;
  position: relative;
}

.remarkdown blockquote::before {
  position: absolute;
  top: 0;
  left: -2ch;
  bottom: 0;
  width: 1ch;
  overflow: hidden;
  white-space: pre;
  font-style: normal;
  content: ">\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a>\a";
  cursor: default;
}

.remarkdown.del-gfm del {
  text-decoration: none;
}

.remarkdown.del-gfm del::before,
.remarkdown.del-gfm del::after {
  content: "~~";
}

/*
Datatables Decorations
*/

.remarkdown.table-marker table {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border-collapse: separate;
  border-spacing: 0.1em;
  line-height: inherit;
  border-bottom: none;
}

.remarkdown.table-marker tr > * {
  position: relative;
  padding: 0.0em 0.5em 0.3em 0.5em;
  text-align: inherit;
  vertical-align: top;
  font-weight: normal;
  border: none;
  background-color: var(--body-color);
}

.remarkdown.table-marker.principles-table tr > * + * {
  padding-left: 3ch;
}

.remarkdown.table-marker thead > tr > th.dt-center.sorting {
  padding-bottom: 1.0em;
  padding-top: 1.0em;
  min-width: 65px;
}

table.dataTable.order-column tbody tr > .sorting_1, table.dataTable.order-column tbody tr > .sorting_2, table.dataTable.order-column tbody tr > .sorting_3, table.dataTable.display tbody tr > .sorting_1, table.dataTable.display tbody tr > .sorting_2, table.dataTable.display tbody tr > .sorting_3 {
  background-color: var(--body-color);
}

.remarkdown.table-marker.principles-table tr:first-child > th:not([scope="row"]) {
  padding-bottom: 1.5em;
  padding-left: 1.5em;
}

.remarkdown.table-marker tr:first-child > th:not([scope="row"])::after {
  content: "--------------------------------------------------------------------------------------------------------------";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 1.5em;
  overflow: hidden;
  word-break: break-all;
  height: 1.5em;
}

.remarkdown.table-marker tr:first-child > * + th:not([scope="row"])::after {
  left: 3ch;
}

.remarkdown.table-marker tr > * + *::before {
  content: "|\a|\a|\a|\a|\a|\a|\a|\a|\a|\a";
  position: absolute;
  overflow: hidden;
  left: -0.3em;
  top: 0;
  bottom: 0;
  white-space: pre;
}

.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
  color: inherit;
  padding-bottom: 1.0em;
}

.dataTables_wrapper .dataTables_filter input, select {
  color: var(--font-color);
}

.dataTables_wrapper .dataTables_length select {
  color: var(--font-color);
  background-color: var(--body-color)
}

.dataTables_wrapper .dataTables_paginate .paginate_button {
  color: var(--link-color) !important;
}

/**
 * Styles for ReMarkdown demo pages
 * Depends on default remarkdown.css
 */

@media (min-width: 900px) {
  html {
    background-color: var(--background-color);
  }
}

body {
  max-width: 750px;
  padding: 30px;
  margin: 0 auto;
  color: var(--font-color);
  background-color: var(--body-color);
}

@media (min-width: 900px) {
  body {
    margin: 30px auto;
    padding: 40px 80px;
    border: 1px solid var(--border-color);
    background-color: var(--body-color);
    box-shadow: 3px 3px 3px -2px var(--border-color);
  }
}

a {
  color: var(--link-color);
  text-decoration: none;
}
a:hover {
  border-bottom: 1px solid rgb(240, 32, 80, .6);
}
a:focus, a:active {
  color: white;
  background-color: var(--link-color);
}

nav {
  margin: 0 0 4em;
  text-align: right;
}
nav > br {
  display: none;
}
nav > span {
  float: left;
}
@media (max-width: 900px) {
  nav > * { display: block; padding-bottom: .4em; }
}

.example {
  margin: 1.5em -30px;
  padding: .5em 30px;
  background: #EEF;
}

/* Make the Markdown-like markers look cool */
.remarkdown ::before,
.remarkdown ::after {
  color: var(--accent-color);
}

/* Our own font-family. Also setting one for code elements */
.remarkdown {
  line-height: 1.5;
  font-family: monospace
}

.remarkdown pre {
  white-space: pre-wrap;
  color: #802020;
}

.remarkdown code {
  color: #802020;
}

@media (max-width: 700px) {
  .remarkdown pre {
    margin-left: 0 !important;
  }
}

.remarkdown table {
  margin: 2.5em 0;
}

/* Styles page */

#style-list tr > * {
  white-space: nowrap;
}

.remarkdown.table-marker h4::before {
  content: "";
}

.remarkdown.table-marker h3::after,
.remarkdown.table-marker h4::after {
  content: "";
}

.remarkdown.table-marker h3,
.remarkdown.table-marker h4 {
  display:inline;
  margin-top: 0;
  margin-bottom: 0;
}

img {
  max-width: 80%;
  height: auto;
  max-height: 95vh;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.remarkdown i.fa { font-size: 11px;  }

#mc_embed_signup .button {
  font-size: 13px;
  font-family: monospace;
  margin: 0 0px 10px 0;
}

#mc_embed_signup form {
  padding: 0px 0 0px 0;
}

img.photo {
  object-fit: cover;
  border-radius: 50%;
  width:auto;
}

## Selection colors

::-moz-selection { /* Code for Firefox */
  color: var(--body-color);
  background: var(--link-color);
}

::selection {
  color: var(--body-color);
  background: var(--link-color);
}

